Fix login on mobile for betslip loaded and apk download link

--- a/src/assets/css/tolkits.css
+++ b/src/assets/css/tolkits.css
@@ -15578,15 +15578,11 @@ li a.live-game.active:hover, .navbar-nav li a.live-game.active:hover, li a.live-
 .betslip-container {
     position: sticky !important;
     top: 84px !important;
-    /* right: 9px; */
-    /* max-width: 210px; */
     background: #fff;
 }
 @media(max-width: 640px){
 
 .betslip-container-mobile {
-    /*bottom: 0;*/
-    /*height: 100%;*/
 }
 
 .bet-slip-footer-toggle {
@@ -15623,8 +15619,6 @@ li a.live-game.active:hover, .navbar-nav li a.live-game.active:hover, li a.live-
     scroll-margin-top: 135px;
 }
 .betslip-container {
-    
-    z-index: 99999;
     background: #ffffff;
 }
 }
